--- a/templates/collection.html
+++ b/templates/collection.html
@@ -43,6 +43,15 @@
                                 {% endif %}
                             {% endfor %}
                         {% endif %}
+                    {% elif collection.lendable %}
+                        {% for each in user.lent_books %}
+                            {% if collection.books[i] == each.book[0] %}
+                                <p>Book is currently lent from this collection to {{each.borrower.username.title()}}</p>
+                                <form action="/delete_request/{{each.id}}">
+                                    <input type='submit' value="Mark as returned">
+                                </form>  
+                            {% endif %}
+                        {% endfor %}
                     {% endif %}
                 {% elif collection.lendable and user in collection.user.friends %}
                     {% if user.get_lender(collection.books[i]) != [] %}
