--- a/templates/collection.html
+++ b/templates/collection.html
@@ -30,14 +30,14 @@
                                 <input type='submit' value="Delete Request">
                             </form> 
                         {% else %}
-                            <p>Lendable from</p>
                             {% for friend in user.friends %}
                                 {% if user in friend.friends %}
                                     {% for each in friend.collections %}
                                         {% if each.lendable %}
                                             {% if collection.books[i] in each.books %}
+                                                <p class='lendablefrom'>Lendable from</p>
                                                 <a href='/user?id={{friend.id}}'>{{friend.username}}</a>
-                                                <form action="/request_book/{{collection.books[i].google_id}}/{{collection.id}}">
+                                                <form action="/request_book/{{collection.books[i].google_id}}/{{each.id}}">
                                                     <input type='submit' value="Request to borrow">
                                                 </form>
                                             {% endif %}
@@ -48,7 +48,7 @@
                         {% endif %}
                     {% elif collection.lendable %}
                         {% for each in user.lent_books %}
-                            {% if collection.books[i] == each.book[0] %}
+                            {% if collection.books[i] == each.book[0] and each.lent %}
                                 <p>Book is currently lent from this collection to {{each.borrower.username.title()}}</p>
                                 <form action="/delete_request/{{each.id}}">
                                     <input type='submit' value="Mark as returned">
@@ -56,7 +56,7 @@
                             {% endif %}
                         {% endfor %}
                     {% endif %}
-                {% elif collection.lendable and user in collection.user.friends %}
+                {% elif collection.lendable and collection.user in user.friends %}
                     {% if user.get_lender(collection.books[i]) != [] %}
                         <p>Book is already requested from {{user.get_lender(collection.books[i])[0].username.title()}}</p>
                         <form action="/delete_request/{{user.get_lender(collection.books[i])[1]}}">
