--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,8 @@
 {% block title %}Welcome to My Reads!{% endblock %}
 
 {% block body %}
+<div class='bg-image'></div>
+<div class='homepage'>
   <h1>Welcome!</h1>
 
   <h2>Create an Account</h2>
@@ -38,5 +40,5 @@
         <input type="submit">
       </p>
     
-  </ul>
+</div>
 {% endblock %}
