--- a/templates/search.html
+++ b/templates/search.html
@@ -9,9 +9,9 @@
       <input type='text' name='search_terms' id='terms'> 
     </div>
     <label>
-      <div id='type'>
+      <div id='type' class='form-group'>
         Search by:
-        <select name='type'>
+        <select name='type' class='form-control'>
           <option value='title'>Title</option>
           <option value='author'>Author</option>
           <option value='user'>User</option>
