--- a/templates/user.html
+++ b/templates/user.html
@@ -2,6 +2,8 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
+<div class='bg-pattern-user'></div>
+<div class="bodytextuser">
     <h1>{{searched_user.username.title()}}</h1>
 
 
@@ -226,5 +228,5 @@
             {% endfor %}
         </div>
     {% endif %}
-
+</div>
 {% endblock %}
