--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,42 +3,48 @@
 
 {% block body %}
 <div class='bg-image'></div>
-<div class='homepage'>
+<div class='homepage container'>
   <h1>Welcome!</h1>
-
+  <div class='row'>
+  <div id='creataccount' class='col'>
   <h2>Create an Account</h2>
   <form action="/users" method="POST">
     <p>
-      Email <input type="text" name="email">
+      <input type="text" name="email" placeholder="Email">
     </p>
 
     <p>
-      Username <input type="username" name="username">
+      <input type="username" name="username" placeholder="Username">
     </p>
 
     <p>
-      Password <input type="password" name="password">
+    <input type="password" name="password" placeholder="Password">
     </p>
 
     <p>
-      <input type="submit">
+      <input class='btn-secondary btn' type="submit">
     </p>
   </form>
+  </div>
 
-    <h2>Already have an account? Log in!</h2>
+  <div id='login' class='col'>
+    <h2>Already have an account? 
+      <br>Log in!</h2>
 
     <form action="/login" method="POST">
       <p>
-        Email <input type="text" name="email">
+      <input type="text" name="email" placeholder="Email">
       </p>
   
       <p>
-        Password <input type="password" name="password">
+      <input type="password" name="password" placeholder="Password">
       </p>
   
       <p>
-        <input type="submit">
+        <input class='btn-secondary btn' type="submit">
       </p>
-    
+    </form>
+  </div>
+  </div>
 </div>
 {% endblock %}
