--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ nav {
 
 /* allfriends styling*/
 .bg-image-allfriends {
-    background: url(/static/photos/bookshelf1.jpg) center;
+    background: url(/static/photos/books2.jpg) center;
     background-size: cover;
     
     position: fixed;
@@ -67,11 +67,14 @@ nav {
 h1 {
     color: rgb(176, 231, 252);
     padding-top: 5%;
+    font-weight: bold;
+    text-decoration: underline white;
+    text-underline-position: under;
 }
 
 
 .bodytextallfriends {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .6);
     color: white;
     font-weight: bold;
     border: 3px solid #f1f1f1;
@@ -91,13 +94,13 @@ h1 {
 }
 
 .friendlink {
-    color: rgb(195, 172, 186);
+    color: rgb(176, 231, 252);
     font-size: larger;
     font-weight: bolder;
 }
 
 p {
-    color: rgb(82, 44, 0);
+    
 }
 
 .friendstatus {
