--- a/templates/allfriends.html
+++ b/templates/allfriends.html
@@ -5,6 +5,8 @@
 <div class='bg-image-allfriends'></div>
 <div class="bodytextallfriends">
     <h1>{{displayed_user.username.title()}}'s Friends</h1>
+    <br>
+    
     {% for friend in displayed_user.friends %}
         <div class=friend>
         {% if friend != user %}
@@ -22,7 +24,7 @@
             {% elif friend in user.friends %}
                 <p class='friendstatus'> Friend request sent </p>
                 <form action="/retract_friend_request/{{friend.id}}">
-                    <input type='submit' value="Cancel request">
+                    <input type='submit' value="Cancel request" class="btn btn-secondary">
                 </form>
 
             {% elif user in friend.friends %}
@@ -30,12 +32,12 @@
                     <input type='submit' value="Accept Friend Request">
                 </form>
                 <form action="/decline_friend/{{friend.id}}">
-                    <input type='submit' value="Decline Friend Request">
+                    <input type='submit' value="Decline Friend Request" class="btn btn-secondary">
                 </form>
             
             {% else %}
                 <form action="/add_friend/{{friend.id}}">
-                    <input type='submit' value="Send a Friend Request">
+                    <input type='submit' value="Send a Friend Request" class="btn btn-secondary">
                 </form>
 
             {% endif %}
