--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,11 @@
         </p>
       {% endfor %}
       {% block body %}{% endblock %}
+      
+      {% block after_body %}
+      {% endblock %}
 
-      {% block after_body %}{% endblock %}
+      
 
       <script src="http://code.jquery.com/jquery.js"></script>
       <script src="/static/books.js"></script>
