--- a/static/style.css
+++ b/static/style.css
@@ -145,12 +145,14 @@ h1 {
     border: 3px solid #f1f1f1;
     position: absolute;
     top: 100%;
+    margin-top: 10%;
     margin-bottom: 10%;
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -60%);
     z-index: 1;
     width: 80%;
     text-align: center;
+    vertical-align: middle;
 }
 
 .detailsimage {
@@ -166,6 +168,21 @@ h1 {
 
 #authors {
     font-size: 20px;
+}
+
+h6 {
+    font-size: larger;
+    font-weight: bold;
+}
+
+.drpdown {
+
+    background-color: #6c757d;
+}
+
+.detailforms {
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 /* collection styling*/
