--- a/templates/book.html
+++ b/templates/book.html
@@ -18,13 +18,14 @@
     <p class='col-8 details'>{{book['description']}}</p>
 
     </div>
+    <br>
+    <br>
     <div class='row'>
     <form class='col' action="/add_book/{{google_id}}">
-        <div id='add_to_collection'>
-            <a>
+        <div id='add_to_collection' class='detailforms'>
+            <h6>
                 Add to a collection:
-            </a>
-            <br>
+            </h6>
             {% set collection_count = [] %}
             {% for every in user.collections %}
                 {% if book_obj in every.books%}
@@ -34,7 +35,7 @@
             {% if collection_count|length == user.collections|length %}
                 <p>Book has been added to all collections</p>
             {% else %}
-                <select name=collection_type>
+                <select class='btn-secondary btn-sm drpdown'  name=collection_type>
                     {% for each in user.collections %}
                         {% if book_obj not in each.books %}
                             <option value={{each.collection_type}}>
@@ -43,38 +44,46 @@
                     {% endfor %}
 
                 </select>
-                <input type='submit' value="Add">
+                <br>
+                <br>
+                <input type='submit' value="Add" class='btn btn-secondary'>
+                <br>
+                <br>
             {% endif %}
         </div>
     </form>
 
-    <div class="col">
+    <div class="col detailforms">
             {% for each in user.collections %}
                 {% if book_obj in each.books %}
-                    <p class=bookincollections> Book in these collections:</p>
-                    <a href='/collection?collection={{each.id}}'>
+                    <h6 class=bookincollections> Book in these collections:</h6>
+                    <a class='friendlink' href='/collection?collection={{each.id}}'>
                         {{' '.join(each.collection_type.split('_')).title() }}</a> 
-                    {% for each in user.lent_books %}
-                        {% if book_obj == each.book[0] and each.lent %}
-                            <p>Book is currently lent from this collection to {{each.borrower.username.title()}}</p>
-                            <p>Contact them at {{each.borrower.email}}</p>
-                            <form action="/delete_request/{{each.id}}">
-                                <input type='submit' value="Mark as returned">
-                            </form>  
+                    {% for every in user.lent_books %}
+                        {% if book_obj == every.book[0] and every.lent and every.collection[0] == each %}
+                            <br>
+                            <p>Book is currently lent from this collection to {{every.borrower.username.title()}}</p>
+                            <p>Contact them at {{every.borrower.email}}</p>
+                            <form action="/delete_request/{{every.id}}">
+                                <input type='submit' class='btn-secondary btn' value="Mark as returned">
+                            </form> 
                         {% endif %}
                     {% endfor %}
                 {% endif %}
+                <br>
             {% endfor %}
+        <br>
     </div>
 
     <br>
     <br>
     <div class='col'>
     {% if user.get_lender(book_obj) != [] %}
-        <p>Book is already requested from {{user.get_lender(book_obj)[0].username.title()}}</p>
+        <h6>Book is already requested from </h6>
+            <a class='friendlink' href='/user?id={{user.get_lender(book_obj)[0]}}'>{{user.get_lender(book_obj)[0].username.title()}}</a>
         <p>Contact them at {{user.get_lender(book_obj)[0].email}}</p>
         <form action="/delete_request/{{user.get_lender(book_obj)[1]}}">
-            <input type='submit' value="Delete Request">
+            <input type='submit' class='btn btn-secondary' value="Delete Request">
         </form>  
     {% else %}
         
@@ -83,17 +92,20 @@
                 {% for each in friend.collections %}
                     {% if each.lendable %}
                         {% if book_obj in each.books%}
-                            <p class='lendablefrom'>Lendable from</p>
-                            <a href='/user?id={{friend.id}}'>{{friend.username}}</a>
+                            <h6 class='lendablefrom'>Lendable from</h6>
+                            <a class='friendlink' href='/user?id={{friend.id}}'>{{friend.username.title()}}</a>
                             <form action="/request_book/{{book_obj.google_id}}/{{each.id}}">
-                                <input type='submit' value="Request to borrow">
+                                <input class='btn btn-secondary' type='submit' value="Request to borrow">
                             </form>
+                            <br>
                         {% endif %}
                     {% endif %}
                 {% endfor %}
             {% endif %}
         {% endfor %}
     {% endif %}
+    <br>
+    <br>
     </div>
 </div>
 </div>
